Pint Changelog
==============

0.10 (unreleased)
-----------------

- Documentation on Pint's array type compatibility has been added to the NumPy support
  page, including a graph of the duck array type casting hierarchy as understood by Pint
  for N-dimensional arrays.
  (Issue #963, Thanks Jon Thielen, Stephan Hoyer, and Guido Imperiale)
- Improved compatibility for downcast duck array types like Sparse and Masked Arrays. A
  collection of basic tests has been added.
  (Issue #963, Thanks Jon Thielen)
- Improvements to wraps and check:
  - fail upon decoration (not execution) by checking wrapped function signature against
    wraps/check arguments.
    (might BREAK test code)
  - wraps only accepts strings and Units (not quantities) to avoid confusion with magnitude.
    (might BREAK code not conforming to documentation)
  - when strict=True, strings that can be parsed to quantities are accepted as arguments.
- Add revolutions per second (rps)
- Improved compatibility for upcast types like xarray's DataArray or Dataset, to which
  Pint Quantities now fully defer for arithmetic and NumPy operations. A collection of
  basic tests for proper deferral has been added (for full integration tests, see
  xarray's test suite). The list of upcast types is available at
  `pint.compat.upcast_types` in the API.
  (Issue #959, Thanks Jon Thielen)
- Moved docstrings to Numpy Docs
  (Issue #958)
- Added tests for immutability of the magnitude's type under common operations
  (Issue #957, Thanks Jon Thielen)
- Switched test configuration to pytest and added tests of Pint's matplotlib support.
  (Issue #954, Thanks Jon Thielen)
- Deprecate array protocol fallback except where explicitly defined (`__array__`,
  `__array_priority__`, `__array_function__`, `__array_ufunc__`). The fallback will
  remain until the next minor version, or if the environment variable
  `PINT_ARRAY_PROTOCOL_FALLBACK` is set to 0.
  (Issue #953, Thanks Jon Thielen)